--- a/index.html
+++ b/index.html
@@ -361,13 +361,52 @@
 
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
+        <div class="modal__button">
         <button type="button" class="modal__close-button" data-modal-close>
           <svg width="11px" height="11px"> 
-            <use href="./images/icons.svg#icon-close"
-            </use>
+            <use href="./images/icons.svg#icon-close">
           </svg>
-          </div>
         </button>
+        </div>
+        <div class="modal__form-container">
+         <form class="modal__contact-form">
+          <label for="client-name"> Imie</label>
+          <div class="modal__contact-form__input-container">
+            <div class="modal__contact-form__icon">
+              <svg width="12px" height="12px">
+                <use href="./images/icons.svg#icon-person-modal">
+              </svg>
+            </div>
+          <input class="modal__contact-form__input-field" type="text" name="name" id="client-name">
+          
+        </div>
+          <label for="client-phone-number"> Telefon</label>
+          <div class="modal__contact-form__input-container">
+            <div class="modal__contact-form__icon">
+              <svg width="12px" height="12px">
+                <use href="./images/icons.svg#icon-phone-modal">
+              </svg>
+            </div>
+          <input class="modal__contact-form__input-field" type="tel" name="client-phone-number" id="client-phone-number">
+          
+        </div>
+          <label for="client-email"> Imie</label>
+          <div class="modal__contact-form__input-container">
+            <div class="modal__contact-form__icon">
+              <svg width="12px" height="12px">
+                <use href="./images/icons.svg#icon-mail-modal">
+              </svg>
+            </div>
+          <input class="modal__contact-form__input-field" type="email" name="client-email" id="client-email">   
+
+        </div>
+          <label for="client-comment"> Komentarz</label>
+          <div class="modal__contact-form__input-container ">
+          <textarea class="modal__contact-form__input-field modal__contact-form__input-field--comment" name="client-comment" id="client-comment" rows="5"> </textarea>
+        </div>
+
+         </form>
+        </div>
       </div>
     </div>
     <script src="./js/modal.js"></script>
