Fixed Hero Container after adding Modern Normalize

--- a/index.html
+++ b/index.html
@@ -52,13 +52,23 @@
     </header>
 
     <main>
-      <section class="hero__container hero__container--background">
+      <!-- <section class="hero__container">
+        <div class="hero__content">
+          <h1 class="hero__title"> EFEKTYWNE ROZWIĄZANIA DLA WASZEGO BIZNESU</h1>
+          <button class="button__primary button__primary--bold-text" type="button" data-modal-open>
+            Zamów usługę
+          </button>
+        </div>
+      </section> -->
+      <section  class="hero__container hero__container--background">
+
         <div class="hero__content">
           <h1 class="hero__title">EFEKTYWNE ROZWIĄZANIA DLA WASZEGO BIZNESU</h1>
           <button class="button__primary button__primary--bold-text" type="button" data-modal-open>
             Zamów usługę
           </button>
         </div>
+      
       </section>
 
       <section class="section">
