Newsletter div changed to <form>

--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
               </div>
             </div>
           </div>
-          <div class="footer__item footer__item--center">
+          <form class="footer__item footer__item--center">
             <p class="footer-social-links--title">ZAPISZ SIĘ DO NEWSLETTERA</p>
             <div class="footer-newsletter__content">
               <input
@@ -373,14 +373,14 @@
                 type="text"
                 placeholder="E-mail"
               />
-              <button class="button__primary button__primary--newsletter">
+              <button class="button__primary button__primary--newsletter" type="submit">
                 Zapisz się
                 <svg width="24px" height="24px">
                   <use href="./images/icons.svg#icon-icon-send"></use>
                 </svg>
               </button>
             </div>
-          </div>
+          </form>
         </div>
       </div>
     </footer>
